--- a/java/calculadora.html
+++ b/java/calculadora.html
@@ -1,1 +1,22 @@
-{\rtf1}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculadora</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+</head>
+<body>
+    <input type="number" class="valor1">
+    <input type="number" class="valor2">
+    <button class="suma">Suma</button>
+    <button class="resta">resta</button>
+    <button class="multiplicacion">multiplicacion</button>
+    <button class="division">division</button>
+
+    <h1 class="resultado"></h1>
+    
+
+    <script src="resultado.js"></script>
+</body>
+</html>
